test/libsolidity/syntaxTests/nameAndTypeResolution/334_fixed_point_casting_exponents_neg.sol
contract test {
    function f() public {
        ufixed c = 42 ** fixed(-1/4);
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
